# SFR_Calculation

./: .gitignore  README.md  SFR.py  main.py  pyproject.toml
Mitre/: README.md
Mitre/MTF_6.6/DataFiles/: 1010A-Hbar.txt  1010A-Vbar.txt  A6sine.TIF  A6sine.txt  A7sine.TIF  A7sine.txt  M13-1X-v1.txt  M13-1X-v2.txt  M13-README.pptx  M13-halfX.txt  M14.txt  M15-60.txt  M6.txt  M7.txt  SIQT-Hbar.txt  SIQT-Vbar.txt  T90a.txt  T90b.txt
Mitre/MTF_6.6/Execs/: macmtf
Mitre/MTF_6.6/TestCase/: In-Out-testcase.txt  test.tif  test_box-color.tif  test_box-previous.tif  tgt.txt
Mitre/MTF_6.6/source/: Makefile  _ReadMe.txt  corner.c  density.c  mtf.c  mtf.h  scurve.c  sine.c  skew.c  spline.c  xterndcl.h  xterndef.h
sfrmat/: README.md
sfrmat/sfrmat2/: README.TXT  rotatev.m  sfrmat2.m
sfrmat/sfrmat2/data/: edge03.tif
sfrmat/sfrmat3/: Burns_BSD_license.txt  README.TXT  deriv1.m  project.m  project_orig.m  sfrmat3.m  test_sfrmat3.m
sfrmat/sfrmat3/doc/: SFR3 changes.doc
